--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "react-simple-maps": "^3.0.0"
   },
+
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
@@ -32,6 +34,7 @@
     "globals": "^15.14.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "@types/react-simple-maps": "^3.0.6"
   }
 }
