--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.7",
     "huggingface": "^1.4.0",
     "openai": "^4.85.1",
+    "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
