--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,11 @@
     "huggingface": "^1.4.0",
     "leaflet": "^1.9.4",
     "openai": "^4.85.1",
-    "dotenv": "^16.4.7",
     "prop-types": "^15.8.1",
-
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "react-simple-maps": "^3.0.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
